# israell

./: .gitignore  Cargo.toml  README.md  market_sample.json
src/: config.rs  execution.rs  main.rs  market.rs  risk.rs  strategy.rs  types.rs
