[package]
name = "polymarket-arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = { version = "1.32", features = ["maths"] }
rust_decimal_macros = "1.32"
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
ethers = { version = "2.0", features = ["abigen", "ws"] } 
uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }
url = "2.4"
